src/objects/Student_Record__c.object
<CustomObject>
    <description>Records of every students</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Student address</description>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <defaultValue>(&quot;Jaipur&quot;)</defaultValue>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B.com</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BSC</fullName>
                </value>
                <value>
                    <fullName>B.Tech</fullName>
                </value>
                <value>
                    <fullName>M.Tech</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_number__c</fullName>
        <label>Contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Semester__c</fullName>
        <label>Current Semester</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Student or parents email id</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Number__c</fullName>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Student exam fees is submit or not</description>
        <label>Exam Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_s_Mobile_Number__c</fullName>
        <label>Father&apos;s Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gender</description>
        <label>Female</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fess_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student Fess submit or not?</description>
        <label>Fess Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GitHub_ID__c</fullName>
        <label>GitHub ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Home Emergency Contact Number</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_code__c</fullName>
        <label>IFSC code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Donation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Gender</description>
        <label>Male</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mothers_Name__c</fullName>
        <description>Student Mothers name</description>
        <label>Mothers Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Student Name</description>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>Parents occupation</description>
        <label>Occupation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <formula>IF( X1st_Semester_Percentage__c  +  X2nd_Semester_Percentage__c  +  X3rd_Semester_Percentage__c  +  X4th_semester_percentage__c  &lt; 0.45, &apos;D&apos;, 
 IF( X1st_Semester_Percentage__c  +  X2nd_Semester_Percentage__c  +  X3rd_Semester_Percentage__c  +  X4th_semester_percentage__c  &lt; 0.70, &apos;C&apos;, 
IF( X1st_Semester_Percentage__c  +  X2nd_Semester_Percentage__c  +  X3rd_Semester_Percentage__c  +  X4th_semester_percentage__c  &lt; 0.85, &apos;B&apos;,&apos;A&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Percentage__c</fullName>
        <description>Whole Year grade</description>
        <label>Overall Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <description>Students  Roll number</description>
        <label>Roll Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester_Details__c</fullName>
        <label>Semester Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <description>Name of Student</description>
        <label>Student Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_in_which_Back_1_sem__c</fullName>
        <label>Subject in which Back 1 sem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_in_which_Back_2_sem__c</fullName>
        <label>Subject in which Back(2 sem)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_in_which_back_3_sem__c</fullName>
        <label>Subject in which back(3 sem)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Semester_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Semester Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Semester_Percentage__c</fullName>
        <description>Student Semester percentage</description>
        <label>1st Semester Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Semester_Percentage__c</fullName>
        <label>2nd Semester Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Semester_back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Semester back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Semester_Percentage__c</fullName>
        <label>3rd Semester Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Semester_back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Semester back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_Semester_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4th Semester Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_semester_percentage__c</fullName>
        <label>4th semester percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Student_Record</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student_Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student_Records</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registrar_Layout</fullName>
        <active>true</active>
        <label>Registrar Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>